@@ -1,3 +1,9 @@
+2010-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* python/mushin/common/app.py:
+	  Add 'add' to add a thing.
+	  Add getThingsByContext functions.
+
 2010-08-18  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* python/mushin/maemo/new.py:
